back_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu-back
  template:
    metadata:
      labels:
        app: menu-back
    spec:
      containers:
      - name: menu-back
        image: blackbo6/menu_back:latest
        ports:
          - containerPort: 4000
---
kind: Service
apiVersion: v1
metadata:
  name:  menu-back-service
spec:
  selector:
    app:  menu-back
  type:  ClusterIP
  ports:
  - protocol: TCP
    port:  4000
    targetPort:  4000
