front_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-front
spec:
  selector:
    matchLabels:
      app: menu-front
  template:
    metadata:
      labels:
        app: menu-front
    spec:
      containers:
      - name: menu-front
        image: blackbo6/menu_front:latest
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name:  menu-front-service
spec:
  selector:
    app:  menu-front
  type:  ClusterIP 
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
