mongo_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo_app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo_app
  template:
    metadata:
      labels:
        app: mongo_app
    spec:
      containers:
      - name: mongo_app
        image: mongo:latest
        ports:
        - containerPort: 270127
        volumeMounts:
          - name:  mongodb-volume
            mountPath:  /data/db
      volumes:
        - name:  mongodb-volume
          persistentVolumeClaim:
            claimName: my-pvc


---
kind: Service
apiVersion: v1
metadata:
  name:  mongo-service
spec:
  selector:
    app:  mongo_app
  type:  ClusterIP
  ports:
  - protocol:  TCP
    port: 270127
    targetPort:  270127
