ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: 18.209.241.10
    http:
      paths:
      - backend:
          serviceName: menu-front-service
          servicePort: 3000
